# nebulousengine

./: .gitignore  Cargo.toml  README.md  editor.old  test-web.bat  todo.md
.fleet/: run.json
assets/: camera.entity  default.input  ground.entity  index.json  light.entity  test.entity  test.input  test.scene  test.ui  test2.scene  test_collapsable.ui  test_scroll.ui
assets/scripts/: init.js
crates/actions/: actions.md
crates/camera/: Cargo.toml
crates/camera/src/: lib.rs
crates/components/: Cargo.toml
crates/components/src/: lib.rs
crates/editor/: Cargo.toml
crates/editor/src/: editor_panel.rs  files_editor_panel.rs  helpers.rs  lib.rs  text_editor.rs
crates/editor/src/editor_panel/: entity_editor.rs  image_viewer.rs  input_editor.rs  model_viewer.rs  text_editor.rs
crates/entities/: Cargo.toml
crates/entities/src/: components.rs  lib.rs  loader.rs
crates/iced_ui/: Cargo.toml
crates/iced_ui/src/: lib.rs
crates/input/: Cargo.toml
crates/input/src/: enums.rs  gamepad_axis_serde.rs  gamepad_button_serde.rs  keycode_serde.rs  lib.rs  mouse_button_serde.rs  structs.rs  types.rs
crates/levels/: Cargo.toml
crates/levels/src/: levels.rs  lib.rs
crates/models/: Cargo.toml
crates/models/src/: animator.rs  gltf.rs  lib.rs
crates/models/src/animator/: component.rs
crates/networking/: Cargo.toml  networking-rework.md
crates/networking/src/: builder.rs  events.rs  levels.rs  lib.rs  states.rs  structs.rs
crates/noneditor/: Cargo.toml
crates/noneditor/src/: lib.rs
crates/scenes/: Cargo.toml
crates/scenes/src/: lib.rs  loader.rs
crates/scripting/: Cargo.toml
crates/scripting/src/: lib.rs
crates/ui/: Cargo.toml  todo.md
crates/ui/src/: camera.rs  component.rs  enum_utils.rs  events.rs  lib.rs  loader.rs  node.rs  serializables.rs  structs.rs  text_area.rs  ui.rs  ui_utils.rs
crates/ui/src/serializables/: color_serde.rs  val_serde.rs  zindex_serde.rs
crates/ui/src/structs/: uirect_serde.rs
crates/utils/: Cargo.toml
crates/utils/src/: enums.rs  follow_camera.rs  from_enums.rs  lib.rs  optionals.rs  state_machines.rs
crates/utils/src/state_machines/: asset.rs
examples/: basic.rs  fox.rs  inputs.rs  levels.rs  network_levels.rs  test.rs  test_systems.rs  text_areas.rs  ui.rs  ui_camera.rs
generators/colors/: colors.py  colors.txt  colors_result.txt
generators/styles/: styles.py  styles_output.txt  styles_source.txt
kotlin-test/: build.gradle.kts
kotlin-test/src/nativeMain/kotlin/: hello.kt
src/: lib.rs  main.rs
test_assets/: test.ui
todolists/: Entities.md  Physics.md  Scenes.md  Scripts.md  UI.md
