[package]
name = "nebulousengine"
version = "0.0.1"
edition = "2021"

[dependencies]
# bevy
bevy = "0.11"
bevy_rapier3d = "0.22.0"

# json
json = "0.12.4"

# internal
nebulousengine_utils = { path = "./crates/utils" }
nebulousengine_input = { path = "./crates/input" }
nebulousengine_models = { path = "./crates/models" }

[features]
editor = []