[package]
name = "nebulousengine"
version = "0.0.1"
edition = "2021"

[dependencies]
# bevy
bevy = "0.12"
bevy_rapier3d = "0.23.0"

# json
json = "0.12.4"

# serde
serde = "1.0.177"
serde_json = "1.0.104"

# internal
nebulousengine_utils = { path = "./crates/utils" }
nebulousengine_input = { path = "./crates/input" }
nebulousengine_models = { path = "./crates/models" }
nebulousengine_networking = { path = "./crates/networking" }
nebulousengine_ui = { path = "./crates/ui" }
nebulousengine_camera = { path = "./crates/camera" }

[features]
editor = []