[package]
name = "nebulousengine"
version = "0.0.1"
edition = "2021"

[dependencies]
# bevy
bevy = "0.12"
bevy_rapier3d = "0.23.0"

# json
json = "0.12.4"

# internal
nebulousengine_utils = { path = "./crates/utils" }
nebulousengine_input = { path = "./crates/input" }
nebulousengine_models = { path = "./crates/models" }
nebulousengine_networking = { path = "./crates/networking" }
nebulousengine_ui = { path = "./crates/ui" }
nebulousengine_camera = { path = "./crates/camera" }
nebulousengine_levels = { path = "./crates/levels" }

[dev-dependencies]
serde = "1.0.193"

[features]
editor = []