[package]
name = "nebulousengine_entities"
version = "0.0.1"
edition = "2021"

[profile.dev.package.bevy_rapier3d]
opt-level = 3

[dependencies]
bevy = "0.10.1"

# json
json = "0.12.4"

# physics
bevy_rapier3d = { version = "*", features = [ "simd-stable", "debug-render-3d" ] }

nebulousengine_utils = { path = "../utils" }