[package]
name = "nebulousengine_scenes"
version = "0.0.1"
edition = "2021"

[dependencies]
bevy = "0.10.1"
json = "0.12.4"
nebulousengine_entities = { path = "../entities" }
nebulousengine_scripting = { path = "../scripting" }
nebulousengine_ui = { path = "../ui" }
nebulousengine_utils = { path = "../utils/" }