[package]
name = "nebulousengine_ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# engine
bevy = "0.12"

# serde
serde = "1.0.193"
serde_json = "1.0.104"
nebulousengine_levels = { path = "../levels" }